Fix cumulative layout shift for logo img

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 main {
   flex: 1;
   padding: 20px;
+  padding-top: 0px;
 }
 
 header {
@@ -24,9 +25,10 @@ header {
 }
 
 #hamburgerContainer {
+  margin-top: 1vh;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
 }
 
 h1, h2, p, ul {
@@ -54,6 +56,10 @@ h1, h2, p, ul {
   color: black;
 }
 
+#desktopNavbar {
+  margin-bottom: 20px;
+}
+
 footer {
   color: white;
   background-color: #ffe4b5;
@@ -75,6 +81,7 @@ footer {
 /* Style the navigation menu */
 #mobileNavbar {
   display: none;
+  margin-bottom: 1vh;
 }
 
 /* Style navigation menu links */
